[gd_scene load_steps=4 format=3 uid="uid://dhvdqe1vl8x08"]

[ext_resource type="Script" path="res://scripts/enemies/boss.gd" id="1_opah6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w7l8k"]
size = Vector2(80, 80)

[sub_resource type="CircleShape2D" id="CircleShape2D_vr3q1"]
radius = 300.0

[node name="Boss" type="Node2D"]

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
scale = Vector2(1.5, 1.5)
script = ExtResource("1_opah6")

[node name="BossSprite" type="ColorRect" parent="CharacterBody2D"]
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.8, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("RectangleShape2D_w7l8k")

[node name="SpecialAttackIndicator" type="ColorRect" parent="CharacterBody2D"]
visible = false
offset_left = -60.0
offset_top = -60.0
offset_right = 60.0
offset_bottom = 60.0
color = Color(1, 0.5, 0, 0.3)

[node name="Area2D" type="Area2D" parent="CharacterBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/Area2D"]
shape = SubResource("CircleShape2D_vr3q1")

[node name="HealthBar" type="ProgressBar" parent="CharacterBody2D"]
offset_left = -60.0
offset_top = -70.0
offset_right = 60.0
offset_bottom = -60.0
max_value = 30.0
value = 30.0
show_percentage = false

[connection signal="body_entered" from="CharacterBody2D/Area2D" to="CharacterBody2D" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="CharacterBody2D/Area2D" to="CharacterBody2D" method="_on_area_2d_body_exited"]